<resources>
    <string name="app_name">ScaffoldSmart</string>
    <string name="image_processing_camera_icon">Image processing camera icon</string>
    <string name="home">Home</string>
    <string name="rental">Rental</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_sallar">Welcome, Sallar</string>
    <string name="inventory">Inventory</string>
    <string name="clients">Clients</string>
    <string name="scaffoldsmart">ScaffoldSmart</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to login</string>
    <string name="sallar_ahmed">Sallar Ahmed</string>
    <string name="sallar_gmail_com">sallar@gmail.com</string>
    <string name="abc_rent_limited">ABC Rent Limited</string>
    <string name="remaining_joints">Remaining Joints:</string>
    <string name="remaining_pipes">Remaining Pipes:</string>
    <string name="total_pipes">Total Pipes:</string>
    <string name="total_joints">Total Joints:</string>
    <string name="personal_details">Personal details</string>
    <string name="other_platforms">Other Platforms</string>
    <string name="send_rental_reminder">Send rental reminder</string>
    <string name="generate_payment_invoices">Generate payment invoices</string>
    <string name="danish_ashfaq">Danish Ashfaq</string>
    <string name="hello">Hello! Thanks for contacting me</string>
    <string name="_09_32_am">09:32 AM</string>
    <string name="_2">2</string>
    <string name="search_messages">Search messages</string>
    <string name="hi_your_rent_for_scaffolding_pipes_is_pending">Hi! Your rent for scaffolding pipes is pending.</string>
    <string name="_0h_i_am_sorry_i_was_busy_at_my_construction_work_thanks_for_remainding_me">0h I am sorry, I was busy at my construction work. thanks for remainding me.</string>
    <string name="message">Message</string>
    <string name="choose_your_user_type">Choose your User-Type</string>
    <string name="admin">Admin</string>
    <string name="client">Client</string>
    <string name="payment_received">Payment Received</string>
    <string name="scaffolding_info">Rental Info</string>
    <string name="quantity">Quantity</string>
    <string name="status">Status</string>
    <string name="_300_pipes_and_two_hundred_joints">300 Pipes and Two Hundred Joints</string>
    <string name="inventory_panel">Inventory Panel</string>
    <string name="add_update_delete_inventory">Add, Update, Delete Inventory!</string>
    <string name="scaffolding_item">Scaffolding Item</string>
    <string name="scaffolding_pipes">Scaffolding Pipes</string>
    <string name="view_item_details">View item details</string>
    <string name="active_price">Active Price</string>
    <string name="_10000_rs">10000. Rs</string>
    <string name="add_new_inventory">Add New Inventory</string>
    <string name="save">Save</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="item_length">Item Length:</string>
    <string name="item_weight">Item Weight:</string>
    <string name="condition">Condition:</string>
    <string name="availability">Availability:</string>
    <string name="client_panel">Client Panel</string>
    <string name="client_info">Client Info</string>
    <string name="view_client_details">View client details</string>
    <string name="add_new_client">Add New Client</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="cnic">CNIC</string>
    <string name="gender">Gender</string>
    <string name="scaffolding_rental_material_info">Scaffolding Rental Material Info</string>
    <string name="items">Items</string>
    <string name="pipes">Pipes</string>
    <string name="abc_street_abc_town_abc_city">abc street abc town abc city</string>
    <string name="cost">Cost</string>
    <string name="duration">Duration</string>
    <string name="rental_info">Rental Info</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="account_setting">Account Setting</string>
    <string name="low_inventory_alert">Low Inventory Alert</string>
    <string name="backup_data">Backup Data</string>
    <string name="recover_data">Recover Data</string>
    <string name="edit_account_info">Edit Account Info</string>
    <string name="edit_admin_name">Edit Admin Name</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="company">Company</string>
    <string name="phone">Phone</string>
    <string name="due_payment">Due Payment</string>
    <string name="admin_s_other_platforms">Admin\'s other platforms</string>
    <string name="send_rental_request">Send Rental Request</string>
    <string name="compare_items_cost">Compare items cost</string>
    <string name="due_date_reminders">Due date reminders</string>
    <string name="overdue_fee_alerts">Overdue fee alerts</string>
    <string name="pipes_and_joints">Pipes and Joints</string>
    <string name="view_rental_history">View rental history</string>
    <string name="search_rental">Search rental</string>
    <string name="search_inventory">Search inventory</string>
    <string name="search_client">Search client</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="request_rental">Request Rental</string>
    <string name="item">Item</string>
    <string name="joints">Joints</string>
    <string name="generators">Generators</string>
    <string name="motors">Motors</string>
    <string name="wench">Wench</string>
    <string name="slug_pumps">Slug Pumps</string>
    <string name="wheel_borrows">Wheel Borrows</string>
    <string name="send">Send</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="in_stock">In-Stock</string>
    <string name="pipes_quantity">Pipes Quantity</string>
    <string name="pipes_length">Pipes Length</string>
    <string name="joints_quantity">Joints Quantity</string>
    <string name="duration_end">Duration End</string>
    <string name="duration_start">Duration Start</string>
    <string name="update_inventory">Update Inventory</string>
    <string name="update_account_info">Update Account Info</string>
    <string name="_1_kg_per_feet">1 kg per feet</string>
    <string name="view_rental_request">View rental request</string>
    <string name="rental_requests">Rental Requests</string>
    <string name="client_name">Client Name:</string>
    <string name="_address">Address:</string>
    <string name="_phone_number">Phone Number:</string>
    <string name="_email">Email:</string>
    <string name="_cnic">CNIC:</string>
    <string name="_duration_start">Duration Start:</string>
    <string name="_duration_end">Duration End:</string>
    <string name="_pipes">Pipes:</string>
    <string name="_pipes_length">Pipes Length:</string>
    <string name="_joints">Joints:</string>
    <string name="_wench">Wench:</string>
    <string name="_slug_pumps">Slug Pumps:</string>
    <string name="_motors">Motors:</string>
    <string name="_generators">Generators:</string>
    <string name="_wheel_borrows">Wheel Borrows:</string>
    <string name="rental_request">Rental Request</string>
    <string name="rent">Rent</string>
    <string name="sr">Sr</string>
    <string name="estimated_rent">Rent:</string>
    <string name="online">Online</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="cancel">Cancel</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="no_client_found">No Client Found!</string>
    <string name="chat_with_admin">Chat with Admin</string>
    <string name="view_rental_detail">View rental details</string>
    <string name="rental_address">Rental Address</string>
    <string name="verify">Verify</string>
    <string name="verify_account">Verify Account</string>
    <string name="compare_item_cost">Compare Item Cost</string>
    <string name="calculate_rent">Calculate Rent</string>
    <string name="total_rent">Total Rent: </string>
    <string name="_0_rs">0. Rs</string>
    <string name="_rental_address">Rental Address:</string>
    <string name="set_inventory_threshold">Set Inventory Threshold</string>
    <string name="pipes_threshold">Pipes Threshold</string>
    <string name="joints_threshold">Joints Threshold</string>
    <string name="wench_threshold">Wench Threshold</string>
    <string name="pumps_threshold">Pumps Threshold</string>
    <string name="motors_threshold">Motors Threshold</string>
    <string name="generators_threshold">Generators Threshold</string>
    <string name="wheel_threshold">Wheel Threshold</string>
    <string name="pipes_counting">Pipes Counting</string>
    <string name="detect_and_count_pipes">Detect and Count Pipes</string>
    <string name="number_of_pipes">Number of Pipes: </string>
    <string name="_0">0</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="unit_rent">Unit Rent</string>
    <string name="terms_and_conditions_nonce_the_payment_is_done_it_will_not_be_refunded"><b>Terms and Conditions</b> \nOnce the Payment is Done it will Not be Refunded.</string>
    <string name="thank_you_for_renting_with_us">Thank you for renting with us!</string>
    <string name="total">Total: </string>
    <string name="company_phone">Company Phone</string>
    <string name="company_email">Company Email</string>
    <string name="invoice_to">Invoice To:</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="customer_email">Customer Email</string>
    <string name="invoice">INVOICE</string>
    <string name="share">Share</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="generate_payment_invoice">Generate Payment Invoice</string>
    <string name="click_to_generate_invoice">Click to generate invoice</string>
    <string name="days">Days</string>
    <string name="invoice_no">Invoice No#</string>
    <string name="issued_date">Issued Date:</string>
    <string name="completed">Completed</string>
    <string name="you_have_completed_a_rental">You have completed a rental</string>
    <string name="view_cart">View Cart</string>
    <string name="add_item_cart">Add Item Cart</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="cart_panel">Cart Panel</string>
    <string name="cart_item">Cart Item</string>
    <string name="length_15_feet">Length: 15 feet</string>
    <string name="quantity_3000">Quantity: 3000</string>
</resources>