<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginVertical="@dimen/_2sdp"
    android:background="@color/white">

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:layout_marginHorizontal="@dimen/_40sdp"
        app:layout_constraintEnd_toStartOf="@+id/itemQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/itemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:layout_marginHorizontal="@dimen/_40sdp"
        app:layout_constraintStart_toEndOf="@+id/itemName"
        app:layout_constraintEnd_toStartOf="@+id/itemLength"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/itemLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:layout_marginHorizontal="@dimen/_40sdp"
        app:layout_constraintStart_toEndOf="@+id/itemQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>